Closed Bug 1411318 Opened 7 years ago Closed 7 years ago

Assertion failure: (!animation.originTime().IsNull() && animation.startTime().type() == MaybeTimeDuration::TTimeDuration) || animation.isNotPlaying() (If we are playing, we should have an origin time and a start time), at /builds/worker/workspace/build/sr

Categories

(Core :: DOM: Animation, defect, P3)

55 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox-esr52 --- unaffected
firefox56 --- wontfix
firefox57 --- wontfix
firefox58 --- fixed

People

(Reporter: jkratzer, Assigned: birtles)

References

(Blocks 1 open bug)

Details

(Keywords: assertion, testcase)

Attachments

(4 files)

Attached file trigger.html
Testcase found while fuzzing mozilla-central rev a80d568a417e.
Flags: in-testsuite?
Attached file log_minidump.txt
Attached file log_stderr.txt
Version: unspecified → 58 Branch
INFO: Last good revision: dca52e4ed76197ec3e3629e659020c3d5c8d81bb
INFO: First bad revision: 095c3fdfc66234228388ba5c0ebaf3d35f2a9868
INFO: Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=dca52e4ed76197ec3e3629e659020c3d5c8d81bb&tochange=095c3fdfc66234228388ba5c0ebaf3d35f2a9868
Has Regression Range: --- → yes
Flags: needinfo?(bbirtles)
Version: 58 Branch → 55 Branch
This appears to be just a mismatch between the condition we use for setting the origin time (has a timeline with a resolved current time) and the condition we use for determining if we are playing or not (has a timeline or not).

In this specific case, we end up with an animation with a timeline but where the timeline returns null from ToTimeStamp. Presumably because either there is no navigation timing object or because its navigationstart timestamp is null. That's not surprising given its the DocumentTimeline associated with this document:

  (new DOMParser).parseFromString('', 'text/html');

So I think we probably just want to fix that mismatch, perhaps by marking animations without an originTime as "not playing" when we send them to the compositor.
Assignee: nobody → bbirtles
Status: NEW → ASSIGNED
Flags: needinfo?(bbirtles)
Component: Graphics: Layers → DOM: Animation
Priority: -- → P3
Comment on attachment 8922181 [details]
Bug 1411318 - Don't consider an animation playing if its timeline is inactive;

https://reviewboard.mozilla.org/r/193214/#review198412
Attachment #8922181 - Flags: review?(hikezoe) → review+
Thanks for the quick review!
Pushed by bbirtles@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2d7eb64ec7d0
Don't consider an animation playing if its timeline is inactive; r=hiro
(In reply to Brian Birtles (:birtles) from comment #8)
> Thanks for the quick review!

I did look at the patch in the try. :)
https://hg.mozilla.org/mozilla-central/rev/2d7eb64ec7d0
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: